[gd_scene load_steps=9 format=3 uid="uid://c5r27jnxhrw7k"]

[ext_resource type="Script" uid="uid://biqsk1bdq8k80" path="res://scripts/main_menu.gd" id="1_06t4h"]
[ext_resource type="FontFile" uid="uid://dbypm7vmyvbs7" path="res://fonts/ferrum.otf" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://bga5pmspuulh8" path="res://assets/images/background-game1.png" id="2_fu7sn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("2_fu7sn")
modulate_color = Color(0.741385, 0.741385, 0.741385, 0.635294)

[sub_resource type="InputEventKey" id="InputEventKey_7vrkn"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_fu7sn"]
events = [SubResource("InputEventKey_7vrkn")]

[sub_resource type="InputEventKey" id="InputEventKey_fu7sn"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_jix8l"]
events = [SubResource("InputEventKey_fu7sn")]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.5
offset_top = -197.0
offset_right = 576.5
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 64
text = "Bzzz the loop"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -53.0
offset_right = 100.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 26
shortcut = SubResource("Shortcut_fu7sn")
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 26
shortcut = SubResource("Shortcut_jix8l")
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 26
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_7vrkn")
theme_override_font_sizes/font_size = 26
text = "Exit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
